acum itinerariile se salveaza in update tour